--- a/src/material/slide-toggle/slide-toggle.scss
+++ b/src/material/slide-toggle/slide-toggle.scss
@@ -216,12 +216,14 @@
 @include token-utils.use-tokens(m2-mat-switch.$prefix, m2-mat-switch.get-token-slots()) {
   .mdc-switch__track::after,
   .mdc-switch__track::before {
-    @include token-utils.create-token-slot(border, track-outline);
+    @include token-utils.create-token-slot(border-width, track-outline-width);
+    @include token-utils.create-token-slot(border-color, track-outline-color);
   }
 
   .mdc-switch--disabled .mdc-switch__track::after,
   .mdc-switch--disabled .mdc-switch__track::before {
-    @include token-utils.create-token-slot(border, disabled-unselected-track-outline);
+    @include token-utils.create-token-slot(border-width, disabled-unselected-track-outline-width);
+    @include token-utils.create-token-slot(border-color, disabled-unselected-track-outline-color);
   }
 }
 
